Changed loading spinner's style

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -10,5 +10,5 @@
     </div>
   </ngx-masonry>
 <div #loadingSpinner id="loading-spinner">
-  <div class="loader">&nbsp;</div>    <!-- &nbsp; required for IntersectionObserver -->
+  <div class="loader"></div>
 </div>
