--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -17,17 +17,11 @@
 }
 
 .loader {
-  width: 90px;
-  height: 14px;
-  text-align: center;
-  --c:#fff 90deg,#0000 0;
-  background:
-    conic-gradient(from 135deg at top   ,var(--c)) 0 0,
-    conic-gradient(from -45deg at bottom,var(--c)) 0 100%;
-  background-size: calc(100%/4) 50%;
-  background-repeat: repeat-x;
-  animation: l12 1s infinite;
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: #563b1d #0000;
+  animation: l1 1s infinite;
 }
-@keyframes l12 {
-  80%,100% {background-position: calc(100%/3) 0,calc(100%/-3) 100%}
-}
+@keyframes l1 {to{transform: rotate(.5turn)}}
